# coder-buddy

./: .gitignore  DEPLOYMENT_STATUS.md  LOCAL_MAC_SETUP.md  README.md  README_MAC.md  backend_test.py  local_backend_test.py  main.py  pyproject.toml  requirements.txt  run_local.sh  setup_mac.sh  start_dashboard.py  test_local_setup.py  web_server.py  web_server_optimized.py
.emergent/: emergent.yml
agent/: fast_project_generator.py  fast_qa_agent.py  graph.py  instant_generator.py  monitoring.py  qa_agent.py  states.py
backend/: server.py
backend/generated_project/: index.html  script.js  styles.css
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: EnhancedProjectGallery.js  EnhancedQAChat.js  PerformanceMonitor.js  ProjectGallery.js  ProjectGenerator.js  QAChat.js  WorkflowMonitor.js
generated_project/: README.md  index.html  script.js  server.py  style.css  styles.css  test_main.py
